随便写个注释

--- a/springboot/src/main/resources/doc/快捷键.md
+++ b/springboot/src/main/resources/doc/快捷键.md
@@ -70,7 +70,7 @@ ALT+ ↑/↓ 在方法间快速移动定位
 CTRL+ALT+ left/right 前后导航编辑过的地方 
 Ctrl＋Shift＋Backspace可以跳转到上次编辑的地 
 Alt+6 查找TODO
-
+Shift＋Shift 搜索任何東西
 
 # 其他快捷键
 SHIFT+ENTER 另起一行 
