安装方法更正

--- a/doc/Linux 软件安装/01-配置与软件安装大纲.md
+++ b/doc/Linux 软件安装/01-配置与软件安装大纲.md
@@ -9,6 +9,8 @@
 [国内yum和epel源](../Linux 配置/使用国内yum和epel源.md)
 [同步网络时间](../Linux 配置/同步网络时间.md)
 
+[SSH-登陆](../Linux 配置/Linux-配置-SSH-登陆.md)
+
 
 ##### 安装软件
 [安装 JDK8](02-安装-JDK8.md)
